--- a/gsap/parallaxquiz/index.css
+++ b/gsap/parallaxquiz/index.css
@@ -1,25 +1,29 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 section {
-  width: 100vw;
   height: 100vh;
-  border: 1px solid black;
-}
-
-article {
   width: 100%;
-  height: 100%;
+  background-color: black;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-
-  gap: 10px;
 }
 
-img {
-  width: 150px;
-  height: 150px;
+section > .album {
+  width: 300px;
+  height: 300px;
+}
+
+section > .album > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+section > .num {
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
 }
